--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "framer-motion": "^10.12.18",
     "gatsby": "^5.9.1",
     "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-sass": "^6.9.0",
     "gatsby-plugin-sitemap": "^6.9.0",
+    "gatsby-source-datocms": "^5.1.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
