start code block

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.18",
     "gatsby": "^5.9.1",
@@ -25,6 +28,7 @@
     "gatsby-source-datocms": "^5.1.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "sass": "^1.62.1",
