--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "gatsby-plugin-sass": "^6.9.0",
     "gatsby-plugin-sitemap": "^6.9.0",
     "gatsby-source-datocms": "^5.1.2",
+    "highlight.js": "^11.9.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-code-blocks": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "sass": "^1.62.1",
