--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-sass": "^6.9.0",
     "gatsby-plugin-sitemap": "^6.9.0",
     "gatsby-source-datocms": "^5.1.2",
+    "gsap": "^3.12.2",
     "highlight.js": "^11.9.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
