--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby": "^5.9.1",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-manifest": "^5.13.0",
     "gatsby-plugin-sass": "^6.9.0",
     "gatsby-plugin-sitemap": "^6.9.0",
     "gatsby-source-datocms": "^5.1.2",
